# fastapiTask

./: .env.example  Dockerfile  complete_rebuild.sh  docker-compose.infra.yml  docker-compose.services.yml  docker-compose.yaml  pyproject.toml
books_service/: .env.example
books_service/src/: main.py
books_service/src/infrastructure/db/: config.py  connection.py  init_db.py  models.py  tables.py
books_service/src/infrastructure/messaging/: kafka_consumer.py
books_service/src/infrastructure/repositories/: book_repo_sql.py  member_repo_sql.py
books_service/src/presentation/: dependencies.py  schemas.py
books_service/src/presentation/routers/: books.py
infrastructure/db/: connection.py  init_db.py
infrastructure/repositories/: member_repo_sql.py
members_service/: .Dockerignore  .env.example  Dockerfile  pyproject.toml
members_service/src/: main.py
members_service/src/infrastructure/db/: config.py  connection.py  models.py  session.py  tables.py
members_service/src/infrastructure/messaging/: kafka_producer.py
members_service/src/infrastructure/repositories/: member_repo_sql.py
members_service/src/presentation/: dependencies.py  schemas.py
members_service/src/presentation/routers/: members.py
presentation/: dependencies.py
presentation/routers/: books.py
src/: main.py
src/infrastructure/db/: connection.py  models.py  session.py  tables.py
src/infrastructure/repositories/: book_repo_sql.py
src/presentation/: schemas.py
src/presentation/routers/: books.py  members.py
