[tool.poetry]
name = "library-app"
version = "0.1.0"
description = ""
authors = ["Mohammad Nabil <mohammadnabilalheileh@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.5"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.46"
pydantic = {extras = ["email"], version = "^2.12.5"}
asyncpg = "^0.31.0"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
